# odin

./: .coveragerc  .gitignore  .mockery.yaml  .pre-commit-config.yaml  go.mod  go.sum  main.py  pyproject.toml
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql
odin/: main.py  utils.py
odin/accounting/api/: __init__.py  category_views.py  expense_views.py  income_views.py  transfer_views.py  transference_views.py  wallet_views.py
odin/accounting/application/: repositories.py
odin/accounting/controllers/: __init__.py  category_creator.py  category_getter.py  expense_creator.py  expense_getter.py  income_creator.py  transfer_creator.py  transference_creator.py  (+1 more)
odin/accounts/: models.py  repositories.py
odin/api/: category_views.py  expense_views.py  income_views.py  main.py  transference_views.py  views.py  wallet_views.py
odin/auth/: backends.py  decorators.py  models.py  repositories.py  views.py
odin/controllers/: __init__.py  category_creator.py  category_getter.py  expense_creator.py  expense_getter.py  income_creator.py  transference_creator.py  wallet_creator.py
odin/models/: __init__.py  category.py  expense.py  transference.py  wallet.py
odin/repositories/: __init__.py  category_repository.py  expense_repository.py  income_repository.py  transference_repository.py  wallet_repository.py
odin/settings/: __init__.py  base.py
odin/shared/: db_connection_manager.py  db_pool.py
scripts/: tests.sh  xenon.sh
src/: main.go
src/app/: application.go  fiber_application.go
tests/: conftest.py  factories.py  repositories.py  utils.py
tests/builders/: account_builder.go  fiber_context_builder.go  request_builder.go
tests/integration_tests/: conftest.py  db_schema.sql  test_repositories.py
tests/testutils/: requests.go  test_path.go  time.go  uuid.go
tests/unit_tests/: conftest.py  test_expense_creator.py  test_expense_getter.py
(+222 files in other folders)
