[tool.poetry]
name = "odin"
version = "0.1.0"
description = "personal accounting management"
authors = ["Julián Cortés <julian.cortes77@pm.me>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
nyoibo = "^0.4.1"
starlette = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
radon = "^5.1.0"
xenon = "^0.9.0"
pre-commit = "^2.17.0"
pytest-mock = "^3.7.0"
requests = "^2.27.1"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
