[tool.poetry]
name = "odin"
version = "0.1.0"
description = "personal accounting management"
authors = ["Julián Cortés <julian.cortes77@protonmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nyoibo = "^0.6.0"
starlette = "^0.34.0"
pycryptodome = "^3.19.0"
asyncpg = "^0.29.0"
uvloop = "^0.19.0"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.26.0"
factory-boy = "^3.3.0"
pytest-mock = "^3.12.0"
pre-commit = "^3.6.0"
xenon = "^0.9.1"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "0.21.0"
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
